[package]
name = "demons-are-outside"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
anyhow = "1.0.51"
futures = "0.3.17"
wasm-bindgen-futures = "0.4.28"

[dependencies.web-sys]
version = "0.3"
features = [
  "CanvasRenderingContext2d",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "Window",
  "Location",
  "KeyboardEvent",
  "MouseEvent",
  "HtmlImageElement",
  "console",
]
